# image-gen

./: .gitignore  main.py  pyproject.toml
backend/: dummy_data.py  settings.py
backend/routes/: images.py
backend/services/: blobstorage_service.py  cosmosdb_service.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: App.tsx  Header.tsx  ImageGallery.tsx  PromptInput.tsx  PromptSelections.tsx
frontend/src/components/PromptBoard/: PromptBoard.tsx
frontend/src/components/PromptBoard/components/: ImageGallery.tsx  PromptInput.tsx  PromptSelections.tsx  PromptToolbar.tsx
frontend/src/contexts/: AppContext.tsx  PromptContext.tsx
frontend/src/pages/: ImageGeneration.tsx
frontend/src/types/: appTypes.ts
notebooks/: dnb_getting_started.ipynb
scripts/: add_data_to_db.py
