[tool.poetry]
name = "prs-bildgenerering"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
fastapi = {extras = ["all"], version = "^0.112.2"}
httpx = "^0.27.2"
pillow = "^10.4.0"
fastapi-azure-auth = "^5.0.1"
pyjwt = "^2.9.0"
azure-cosmos = "^4.7.0"
azure-storage-blob = "^12.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
